Minor GUI Changes
Think I'm decided on a style for the buttons. Find out next time!

--- a/MGS1 MC Cheat Trainer/MainForm.resx
+++ b/MGS1 MC Cheat Trainer/MainForm.resx
@@ -11187,6 +11187,86 @@
         AAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="button1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAUIAAAA2CAYAAACyaZD/AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAAy1JREFUeF7t2c1LVGEYhvH5G8vsy6yV7U1L8yvFBIsYiWhhDJnOOIo2pdJC+trI
+        YCFCmUgYamER4UIxIiu8m3tCF46LNi1Oz7X4LebMGc77zAwX7+GkOhcndH3tufo+FQEgFLfPDUylP84o
+        s72koR9rABCK25den1Hq5ucXuvf9nfK768r+fK/BnRUNfFtW5uuS7my9Uf/mawBINLfMTXPb3Di3zs1z
+        +9zA/RDmfn0on9S/uaBbX+bKlexdeaKe5WkASDS3zE1z29w4t87NqwhhtrRNdDX9unf1afm+uWkup4bZ
+        uwCQaG6Zm+a2uXFunZtXEUJvF29vzOva6jO1LxRUX8yobvqGzk1dBRKrdqJLNYUOnbrfplPjrTox1qLj
+        o82qHm1S9UiTjo1c0rH8RVXlG1U1vKdBR3N7LlQ4kt1T/w/9ucZh199fW2mdXmt5zaX1ew7P47k8n+f0
+        vJ7b858utOvMw06dnew+9Lv6n7llbprb5sa5dW5eRQj3DnS/faSLLwd1/nFaJ8daD/w4AJA8bpmb5ra5
+        cQe7RwgB/PcIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDw
+        CCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDw
+        CCGA8AghgPAIIYDwCCGA8AghgPAIIXCIquHG0v+7RTWFDtVOdOnsZLfOPLiik+Mtqh65VHq/4dDPIZkI
+        IYDwCCGA8AghgPAIIYDwCCGA8P46hIM7K7q9Ma9rq8/UvlBQfTGjuukbOjd1FQASzS1z09w2N86tc/Mq
+        Qpj9saY7W2/KB3tXn6pzcUJNczk1zN4FgERzy9w0t82Nc+vcvIoQ5n590MC3ZfVvLujWlzml12fUu/JE
+        PcvTAJBobpmb5ra5cW6dm1cRwvzuurI/35e3iz4p83WpXM3+zdcAkGhumZvmtrlxbp2btx9CVzKzvaSh
+        0jYRACJx+9IfZ5TyffP1tefq+1QEgFDcPjcw5ScpzfN5tb0aB4BQLpfaV1/M6DcKKEvAw8pj/QAAAABJ
+        RU5ErkJggg==
+</value>
+  </data>
+  <data name="button2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAUIAAAA2CAYAAACyaZD/AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAAy1JREFUeF7t2c1LVGEYhvH5G8vsy6yV7U1L8yvFBIsYiWhhDJnOOIo2pdJC+trI
+        YCFCmUgYamER4UIxIiu8m3tCF46LNi1Oz7X4LebMGc77zAwX7+GkOhcndH3tufo+FQEgFLfPDUylP84o
+        s72koR9rABCK25den1Hq5ucXuvf9nfK768r+fK/BnRUNfFtW5uuS7my9Uf/mawBINLfMTXPb3Di3zs1z
+        +9zA/RDmfn0on9S/uaBbX+bKlexdeaKe5WkASDS3zE1z29w4t87NqwhhtrRNdDX9unf1afm+uWkup4bZ
+        uwCQaG6Zm+a2uXFunZtXEUJvF29vzOva6jO1LxRUX8yobvqGzk1dBRKrdqJLNYUOnbrfplPjrTox1qLj
+        o82qHm1S9UiTjo1c0rH8RVXlG1U1vKdBR3N7LlQ4kt1T/w/9ucZh199fW2mdXmt5zaX1ew7P47k8n+f0
+        vJ7b858utOvMw06dnew+9Lv6n7llbprb5sa5dW5eRQj3DnS/faSLLwd1/nFaJ8daD/w4AJA8bpmb5ra5
+        cQe7RwgB/PcIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDw
+        CCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDw
+        CCGA8AghgPAIIYDwCCGA8AghgPAIIXCIquHG0v+7RTWFDtVOdOnsZLfOPLiik+Mtqh65VHq/4dDPIZkI
+        IYDwCCGA8AghgPAIIYDwCCGA8P46hIM7K7q9Ma9rq8/UvlBQfTGjuukbOjd1FQASzS1z09w2N86tc/Mq
+        Qpj9saY7W2/KB3tXn6pzcUJNczk1zN4FgERzy9w0t82Nc+vcvIoQ5n590MC3ZfVvLujWlzml12fUu/JE
+        PcvTAJBobpmb5ra5cW6dm1cRwvzuurI/35e3iz4p83WpXM3+zdcAkGhumZvmtrlxbp2btx9CVzKzvaSh
+        0jYRACJx+9IfZ5TyffP1tefq+1QEgFDcPjcw5ScpzfN5tb0aB4BQLpfaV1/M6DcKKEvAw8pj/QAAAABJ
+        RU5ErkJggg==
+</value>
+  </data>
+  <data name="button3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAUIAAAA2CAYAAACyaZD/AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAAy1JREFUeF7t2c1LVGEYhvH5G8vsy6yV7U1L8yvFBIsYiWhhDJnOOIo2pdJC+trI
+        YCFCmUgYamER4UIxIiu8m3tCF46LNi1Oz7X4LebMGc77zAwX7+GkOhcndH3tufo+FQEgFLfPDUylP84o
+        s72koR9rABCK25den1Hq5ucXuvf9nfK768r+fK/BnRUNfFtW5uuS7my9Uf/mawBINLfMTXPb3Di3zs1z
+        +9zA/RDmfn0on9S/uaBbX+bKlexdeaKe5WkASDS3zE1z29w4t87NqwhhtrRNdDX9unf1afm+uWkup4bZ
+        uwCQaG6Zm+a2uXFunZtXEUJvF29vzOva6jO1LxRUX8yobvqGzk1dBRKrdqJLNYUOnbrfplPjrTox1qLj
+        o82qHm1S9UiTjo1c0rH8RVXlG1U1vKdBR3N7LlQ4kt1T/w/9ucZh199fW2mdXmt5zaX1ew7P47k8n+f0
+        vJ7b858utOvMw06dnew+9Lv6n7llbprb5sa5dW5eRQj3DnS/faSLLwd1/nFaJ8daD/w4AJA8bpmb5ra5
+        cQe7RwgB/PcIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDw
+        CCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDw
+        CCGA8AghgPAIIYDwCCGA8AghgPAIIXCIquHG0v+7RTWFDtVOdOnsZLfOPLiik+Mtqh65VHq/4dDPIZkI
+        IYDwCCGA8AghgPAIIYDwCCGA8P46hIM7K7q9Ma9rq8/UvlBQfTGjuukbOjd1FQASzS1z09w2N86tc/Mq
+        Qpj9saY7W2/KB3tXn6pzcUJNczk1zN4FgERzy9w0t82Nc+vcvIoQ5n590MC3ZfVvLujWlzml12fUu/JE
+        PcvTAJBobpmb5ra5cW6dm1cRwvzuurI/35e3iz4p83WpXM3+zdcAkGhumZvmtrlxbp2btx9CVzKzvaSh
+        0jYRACJx+9IfZ5TyffP1tefq+1QEgFDcPjcw5ScpzfN5tb0aB4BQLpfaV1/M6DcKKEvAw8pj/QAAAABJ
+        RU5ErkJggg==
+</value>
+  </data>
+  <data name="button4.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAUIAAAA2CAYAAACyaZD/AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAAy1JREFUeF7t2c1LVGEYhvH5G8vsy6yV7U1L8yvFBIsYiWhhDJnOOIo2pdJC+trI
+        YCFCmUgYamER4UIxIiu8m3tCF46LNi1Oz7X4LebMGc77zAwX7+GkOhcndH3tufo+FQEgFLfPDUylP84o
+        s72koR9rABCK25den1Hq5ucXuvf9nfK768r+fK/BnRUNfFtW5uuS7my9Uf/mawBINLfMTXPb3Di3zs1z
+        +9zA/RDmfn0on9S/uaBbX+bKlexdeaKe5WkASDS3zE1z29w4t87NqwhhtrRNdDX9unf1afm+uWkup4bZ
+        uwCQaG6Zm+a2uXFunZtXEUJvF29vzOva6jO1LxRUX8yobvqGzk1dBRKrdqJLNYUOnbrfplPjrTox1qLj
+        o82qHm1S9UiTjo1c0rH8RVXlG1U1vKdBR3N7LlQ4kt1T/w/9ucZh199fW2mdXmt5zaX1ew7P47k8n+f0
+        vJ7b858utOvMw06dnew+9Lv6n7llbprb5sa5dW5eRQj3DnS/faSLLwd1/nFaJ8daD/w4AJA8bpmb5ra5
+        cQe7RwgB/PcIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDw
+        CCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDwCCGA8AghgPAIIYDw
+        CCGA8AghgPAIIYDwCCGA8AghgPAIIXCIquHG0v+7RTWFDtVOdOnsZLfOPLiik+Mtqh65VHq/4dDPIZkI
+        IYDwCCGA8AghgPAIIYDwCCGA8P46hIM7K7q9Ma9rq8/UvlBQfTGjuukbOjd1FQASzS1z09w2N86tc/Mq
+        Qpj9saY7W2/KB3tXn6pzcUJNczk1zN4FgERzy9w0t82Nc+vcvIoQ5n590MC3ZfVvLujWlzml12fUu/JE
+        PcvTAJBobpmb5ra5cW6dm1cRwvzuurI/35e3iz4p83WpXM3+zdcAkGhumZvmtrlxbp2btx9CVzKzvaSh
+        0jYRACJx+9IfZ5TyffP1tefq+1QEgFDcPjcw5ScpzfN5tb0aB4BQLpfaV1/M6DcKKEvAw8pj/QAAAABJ
+        RU5ErkJggg==
+</value>
+  </data>
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAABAAAAAQACAIAAADwf7zUAAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1
